<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_google_signin_btn_text_dark_pressed"
    android:showDividers="middle"
    android:divider="@android:color/black"
    tools:context=".otherSettings">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_other"
        android:padding="5dp"
        android:textSize="38dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:divider="@android:color/black" >


        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:text="@string/btn1_other"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:id="@+id/homControlBtn1"
            android:text="@string/btn1">
        </Button>
    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:divider="@android:color/black" >


        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/btn2_other"
            android:gravity="start"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:id="@+id/homeControlBtn2"
            android:text="@string/btn2" >
        </Button>

    </LinearLayout>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:divider="@android:color/black" >

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/btn3_other"
            android:gravity="start"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:id="@+id/homControlBtn3"
            android:text="@string/btn3" >
        </Button>

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:dividerPadding="@dimen/default_gap"
        android:divider="@android:color/black" >

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/btn4_other"
            android:gravity="start"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:id="@+id/homControlBtn4"
            android:text="@string/btn4" >
        </Button>

    </LinearLayout>


    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:background="@drawable/settings"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/warning"
        android:textAllCaps="false"
        android:textStyle="italic"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        >
    </TextView>

</LinearLayout>