<?xml version="1.0" encoding="utf-8"?>
<!-- Source: https://www.youtube.com/watch?v=VUPM387qyrw -->
<!-- Add image buttons around ~10:00 in -->
<!-- Other Source: https://www.youtube.com/watch?v=K2V6Y7zQ8NU -->
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity" >

<RelativeLayout
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="5sp">

    <TextView
        android:id="@+id/textGrid"
        android:text="Smart House: Main Screen"
        android:textSize="35sp"
        android:textColor="@android:color/white"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    />
</RelativeLayout>



<GridLayout
    android:id="@+id/mainGrid"
    android:columnCount="2"
    android:rowCount="2"
    android:alignmentMode="alignMargins"
    android:columnOrderPreserved="false"
    android:layout_weight="10"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20sp" >
    <!-- Row 1 -->
    <!-- Column 1 -->


    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_marginBottom="16sp"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"

        app:cardElevation="8sp"
        app:cardCornerRadius="8sp"
        >
        <LinearLayout
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="1sp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:background="@drawable/house"
                android:onClick="homeControls1">
            </ImageButton>

            <Button
                android:id="@+id/btnHomeControls"
                android:text="@string/btn_home_control"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="homeControls1" >
            </Button>




        </LinearLayout>
    </android.support.v7.widget.CardView>

     <!-- Column 2 -->
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_marginBottom="16sp"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        app:cardElevation="8sp"
        app:cardCornerRadius="8sp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="1sp"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:background="@drawable/heart"
                android:onClick="heartbeatMonitor1">
            </ImageButton>

            <Button
                android:id="@+id/btnHeartMonitor"
                android:text="@string/btn_heart_monitor"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="heartbeatMonitor1">

            </Button>


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!-- Row 2 -->
    <!-- Column 1 -->
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_marginBottom="16sp"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        app:cardElevation="8sp"
        app:cardCornerRadius="8sp"
        >
        <LinearLayout
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="1sp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:background="@drawable/fingerprint"
                android:onClick="fingerprint1" >
            </ImageButton>

            <Button
                android:id="@+id/btnFingerPrint"
                android:text="@string/btn_fingerprint"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="fingerprint1"
                android:layout_marginBottom="5dp">

            </Button>



        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!-- Column 2 -->
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_marginBottom="16sp"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        app:cardElevation="8sp"
        app:cardCornerRadius="8sp"
        >
        <LinearLayout
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="1sp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:background="@drawable/settings"
                android:onClick="otherSettings1">
            </ImageButton>

            <Button
                android:id="@+id/btnOther"
                android:text="@string/btn_other"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="otherSettings1">
            </Button>





        </LinearLayout>
    </android.support.v7.widget.CardView>

</GridLayout>

</LinearLayout>